--- a/simon-says/src/css/_media-queries.css
+++ b/simon-says/src/css/_media-queries.css
@@ -64,5 +64,8 @@
   .actionButton {
     font-size: 1.6rem;
   }
+
+  .actionButtonHighlight {
+  width: 242px;}
 }
 
