--- a/simon-says/src/css/base/_utils.css
+++ b/simon-says/src/css/base/_utils.css
@@ -54,3 +54,9 @@
 .no-pointer-events {
   pointer-events: none;
 }
+
+.opacity {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
